Implementation of create doctors
