# backend/docs/swagger.json
@@ -14,6 +14,29 @@
     "host": "localhost:8034",
     "basePath": "/",
     "paths": {
+        "/api/doctor": {
+            "post": {
+                "description": "Create doctor",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Create Doctor Handler"
+                ],
+                "summary": "Create Doctor",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateDoctorRequest"
+                        }
+                    }
+                }
+            }
+        },
         "/api/healthy": {
             "get": {
                 "description": "Check if application if healthy",
@@ -90,6 +113,23 @@
             "properties": {
                 "access_token": {
                     "type": "string"
+                }
+            }
+        },
+        "models.CreateDoctorRequest": {
+            "type": "object",
+            "properties": {
+                "birthday": {
+                    "type": "string"
+                },
+                "crm": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/models.User"
                 }
             }
         },
