# backend/models/create_doctor_request.go
@@ -1,0 +1,8 @@
+package models
+
+type CreateDoctorRequest struct {
+	Name     string `json:"name"`
+	Crm      string `json:"crm"`
+	Birthday string `json:"birthday"`
+	User     User   `json:"user"`
+}
